--- a/bio.html
+++ b/bio.html
@@ -30,7 +30,7 @@
             </div> -->
             <a href="index.html" class="logo">
                 <h4><img src="assets/images/banner-lft-logo.png" 
-                  width="300" 
+                  width="55%" 
                   height="300"
                   class="center" /></h4>
               </a>
