--- a/bio.html
+++ b/bio.html
@@ -31,7 +31,7 @@
             <a href="index.html" class="logo">
                 <h4><img src="assets/images/banner-lft-logo.png" 
                   width="55%" 
-                  height="300"
+                  height="30%"
                   class="center" /></h4>
               </a>
     </div>
