--- a/bio.html
+++ b/bio.html
@@ -27,7 +27,7 @@
             <!-- <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
                 <img class="backdrop linktree">
                 <h2 style="color: #ffffff; padding-top: 20px;"> </h2>
-            </div> 55-->
+            </div> -->
             <a href="index.html" class="logo">
                 <h4><img src="assets/images/banner-lft-logo.png" 
                   width="55%" 
