--- a/bio.html
+++ b/bio.html
@@ -42,7 +42,7 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='#'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Open Valorant Tournament Coming Soon!!!</button>
+                    <button onclick="location.href='https://www.infiniteproleague.games/event1.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Open Valorant Tournament REGISTER NOW!</button>
                 </div>
                 <div style="padding-bottom: 30px;">
                     <button onclick="location.href='https://www.infiniteproleague.games/'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Go to Website</button>
